fix project links

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 							<section id="two">
 								<div class="container">
 									<h3>Skills</h3>
-									<p>These are some of the things I can do, which I've practiced in my projects</p>
+									<p>These are some of the things I can do, take a look at the projects section to see how I've put them into action.</p>
 									<ul class="feature-icons">
 										<li class="icon solid fa-code">Python</li>
 										<li class="icon solid fa-cubes">SQL</li>
@@ -106,21 +106,21 @@
 											</div>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
+											<a href="https://github.com/dsteffan/reddit_classification" class="image"><img src="images/pic03.jpg" alt="" /></a>
 											<div class="inner">
 												<h4>Reddit Classification</h4>
-												<p>Pathfinder and D&D can seem like the same game even to someone experienced with tabletop roleplaying games. In this project, I aim to train a model that can tell them apart.</p>
+												<p>Pathfinder and D&D can sometimes seem like the same game even to someone experienced with tabletop roleplaying games. In this project, I aim to train a model that can tell them apart.</p>
 											</div>
 										</article>
 										<article>
 											<a href="https://github.com/dsteffan/mount_rainier_disaster_estimate" class="image"><img src="images/pic01.jpg" alt="" /></a>
 											<div class="inner">
 												<h4>Mount Rainier Disaster Estimate</h4>
-												<p>Estimation of the damages from the lahar flows from a potential eruption of Mount Rainier. Are you at risk?</p>
+												<p>The goal of this group project is to estimate the damages cause by the lahar flows from a potential eruption of Mount Rainier. Is your property at risk?</p>
 											</div>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
+											<a href="https://github.com/dsteffan/ames_analysis" class="image"><img src="images/pic02.jpg" alt="" /></a>
 											<div class="inner">
 												<h4>Ames, Iowa: A Regression Analysis</h4>
 												<p>Help Jimmy buy a house in my first foray into machine learning, with an emphasis on interpretation for a non- to semi- technical audiences.</p>
@@ -134,15 +134,15 @@
 							<section id="four">
 								<div class="container">
 									<h3>Contact Me</h3>
-									<p>Feel free to send me an email or message on LinkedIn. I'm also on Medium.</p>
+									<p>Feel free to send me an email or message on LinkedIn. I'm also on Medium, where I post tutorials or general musings.</p>
 									<ul class="feature-icons">
 										<li class="icon solid fa-envelope"><a href="mailto:dsteffan96@gamil.com"><address>dsteffan96@gmail.com </address></a></li>
-										<li class="icon solid fa-linkedin"><a href="https://www.linkedin.com/in/derek-steffan/">LinkedIn</a></li>
-										<li class="icon solid fa-medium"><a href="https://medium.com/@dsteffan96">Medium</a></li>
-										<li class="icon solid fa-github"><a href="https://github.com/dsteffan">GitHub</a></li>
+										<li class="icon solid fa-link"><a href="https://www.linkedin.com/in/derek-steffan/">LinkedIn</a></li>
+										<li class="icon solid fa-rss"><a href="https://medium.com/@dsteffan96">Medium</a></li>
+										<li class="icon solid fa-code-branch"><a href="https://github.com/dsteffan">GitHub</a></li>
 									</ul>
 									<ul class="actions">
-										<li><a href="Derek_Steffan_Resume_June_2019.pdf" class="button primary icon solid fa-download">Download Resume</a></li>
+										<li><a href="Derek_Steffan_Resume_June_2019.pdf" class="button primary icon solid fa-download">Resume</a></li>
 									</ul>
 									
 								</div>
