add project images

--- a/index.html
+++ b/index.html
@@ -92,35 +92,35 @@
 									<p>Here are some of the projects I've worked on, either solo or in a group. Click on the associated image to be taken to the repository on GitHub.</p>
 									<div class="features">
 										<article>
-											<a href="https://github.com/dsteffan/twitch_chat_analysis" class="image"><img src="images/pic01.jpg" alt="" /></a>
+											<a href="https://github.com/dsteffan/twitch_chat_analysis" class="image"><img src="images/twitch.png" alt="" /></a>
 											<div class="inner">
 												<h4>Automated Twitch Highlights</h4>
-												<p>Too busy to keep up with your favorite broadcasters? Save some time with this project that can automatically generate highlight reels of Twitch channels based on chat. As an added bonus, you can watch my presentation of this project <a href="https://youtu.be/sXe9k45Bcn4">here</a>!</p>
+												<p>Too busy to keep up with your favorite broadcasters? Save some time with this project that automatically generates highlight reels of Twitch channels based on chat. As an added bonus, you can watch my presentation of this project <a href="https://youtu.be/sXe9k45Bcn4">here</a>!</p>
 											</div>
 										</article>
 										<article>
-											<a href="https://github.com/dsteffan/techup-seattle" class="image"><img src="images/pic02.jpg" alt="" /></a>
+											<a href="https://github.com/dsteffan/techup-seattle" class="image"><img src="images/maps_seattle.jpg" alt="" /></a>
 											<div class="inner">
 												<h4>Gathering Hub</h4>
 												<p>Find tech meetups in your area with this app, developed over the course of a two-day hackathon. There isn't a lot of my own contribution in this repository, so read my blog about it <a href="https://medium.com/@dsteffan96/my-experience-with-sql-database-management-ba9d4a1a4e92">here</a>.</p>
 											</div>
 										</article>
 										<article>
-											<a href="https://github.com/dsteffan/reddit_classification" class="image"><img src="images/pic03.jpg" alt="" /></a>
+											<a href="https://github.com/dsteffan/reddit_classification" class="image"><img src="images/reddit.jpg" alt="" /></a>
 											<div class="inner">
 												<h4>Reddit Classification</h4>
-												<p>Pathfinder and D&D can sometimes seem like the same game even to someone experienced with tabletop roleplaying games. In this project, I aim to train a model that can tell them apart.</p>
+												<p>Pathfinder and D&D can sometimes seem like the same game even to someone experienced with tabletop roleplaying games. In this project, I aim to train a model that can tell them apart using posts from Reddit.</p>
 											</div>
 										</article>
 										<article>
-											<a href="https://github.com/dsteffan/mount_rainier_disaster_estimate" class="image"><img src="images/pic01.jpg" alt="" /></a>
+											<a href="https://github.com/dsteffan/mount_rainier_disaster_estimate" class="image"><img src="images/mount_rainier.jpg" alt="" /></a>
 											<div class="inner">
 												<h4>Mount Rainier Disaster Estimate</h4>
 												<p>The goal of this group project is to estimate the damages cause by the lahar flows from a potential eruption of Mount Rainier. Is your property at risk?</p>
 											</div>
 										</article>
 										<article>
-											<a href="https://github.com/dsteffan/ames_analysis" class="image"><img src="images/pic02.jpg" alt="" /></a>
+											<a href="https://github.com/dsteffan/ames_analysis" class="image"><img src="images/ames_iowa.jpg" alt="" /></a>
 											<div class="inner">
 												<h4>Ames, Iowa: A Regression Analysis</h4>
 												<p>Help Jimmy buy a house in my first foray into machine learning, with an emphasis on interpretation for a non- to semi- technical audiences.</p>
