--- a/index.html
+++ b/index.html
@@ -95,6 +95,7 @@
 											<a href="https://github.com/dsteffan/twitch_chat_analysis" class="image" target="_blank"><img src="images/twitch.png" alt="" /></a>
 											<div class="inner">
 												<h4>Automated Twitch Highlights</h4>
+												<h5><i>Machine Learning | Python | Web Scraping | NLP</i></h5>
 												<p>Too busy to keep up with your favorite broadcasters? Save some time with this project that automatically generates highlight reels of Twitch channels based on chat. As an added bonus, you can watch my presentation of this project <a href="https://youtu.be/sXe9k45Bcn4" target="_blank">here</a>!</p>
 											</div>
 										</article>
@@ -102,13 +103,15 @@
 											<a href="https://github.com/dsteffan/techup-seattle" class="image" target="_blank"><img src="images/maps_seattle.jpg" alt="" /></a>
 											<div class="inner">
 												<h4>Gathering Hub</h4>
-												<p>Find tech meetups in your area with this app, developed over the course of a two-day hackathon. There isn't a lot of my own contribution in this repository, so read my blog about it <a href="https://medium.com/@dsteffan96/my-experience-with-sql-database-management-ba9d4a1a4e92" target="_blank">here</a>.</p>
+												<h5><i>Web Scraping | SQL | Database Management</i></h5>
+												<p>Find tech meetups in your area with this app, developed over the course of a two-day hackathon. There isn't a lot of my own contribution in this repository, so read my blog about it <a href="https://medium.com/@dsteffan96/my-experience-with-sql-database-management-ba9d4a1a4e92" target="_blank"s>here</a>.</p>
 											</div>
 										</article>
 										<article>
 											<a href="https://github.com/dsteffan/reddit_classification" class="image" target="_blank"><img src="images/reddit.jpg" alt="" /></a>
 											<div class="inner">
 												<h4>Reddit Classification</h4>
+												<h5><i>Web Scraping | NLP | Machine Learning</i></h5>
 												<p>Pathfinder and D&D can sometimes seem like the same game even to someone experienced with tabletop roleplaying games. In this project, I aim to train a model that can tell them apart using posts from Reddit.</p>
 											</div>
 										</article>
@@ -116,6 +119,7 @@
 											<a href="https://github.com/dsteffan/mount_rainier_disaster_estimate" class="image" target="_blank"><img src="images/mount_rainier.jpg" alt="" /></a>
 											<div class="inner">
 												<h4>Mount Rainier Disaster Estimate</h4>
+												<h5><i>Git | Web Scraping</i></h5>
 												<p>The goal of this group project is to estimate the damages cause by the lahar flows from a potential eruption of Mount Rainier. Is your property at risk?</p>
 											</div>
 										</article>
@@ -123,6 +127,7 @@
 											<a href="https://github.com/dsteffan/ames_analysis" class="image" target="_blank"><img src="images/ames_iowa.jpg" alt="" /></a>
 											<div class="inner">
 												<h4>Ames, Iowa: A Regression Analysis</h4>
+												<h5><i>Machine Learning | Data Communication</i></h5>
 												<p>Help Jimmy buy a house in my first foray into machine learning, with an emphasis on interpretation for a non- to semi- technical audiences.</p>
 											</div>
 										</article>
@@ -487,8 +492,8 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 											</div>
 										</div>
 										<h5>Left &amp; Right</h5>
-										<p><span class="image left"><img src="images/avatar.jpg" alt="" /></span>Fringilla nisl. Donec accumsan interdum nisi, quis tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent. Donec accumsan interdum nisi, quis tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent.</p>
-										<p><span class="image right"><img src="images/avatar.jpg" alt="" /></span>Fringilla nisl. Donec accumsan interdum nisi, quis tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent. Donec accumsan interdum nisi, quis tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent.</p>
+										<p><span class="image left"><img src="images/avatar_blank.jpg" alt="" /></span>Fringilla nisl. Donec accumsan interdum nisi, quis tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent. Donec accumsan interdum nisi, quis tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent.</p>
+										<p><span class="image right"><img src="images/avatar_blank.jpg" alt="" /></span>Fringilla nisl. Donec accumsan interdum nisi, quis tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent. Donec accumsan interdum nisi, quis tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent.</p>
 									</section>
 
 								</div>
