fix typo and add skills

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 									</header>
 									<p>I am a data scientist with machine learning experience in Python and R, with an emphasis on time-series data and natural language processing. Currently, I’m pivoting from an academic background in computer science.
 									<br /><br />
-									I love to code, and I love to talk about code; professionally, that means working out solutions and presenting them to various levels of technical expertise. Ask me my about my projects!</p>
+									I love to code, and I love to talk about code; professionally, that means working out solutions and presenting them to various levels of technical expertise. Ask me about my projects!</p>
 								<!--
 									<ul class="icons">
 										<li><a href="#" class="icon brands fa-medium"><span class="label">Medium</span></a></li>
@@ -81,6 +81,8 @@
 										<li class="icon solid fa-globe">Web Scraping</li>
 										<li class="icon solid fa-bolt">Cloud Computing</li>
 										<li class="icon solid fa-users">Git</li>
+										<li class="icon solid fa-braille">Machine Learning</li>
+										<li class="icon solid fa-chart-bar">Data Visualization</li>
 									</ul>
 								</div>
 							</section>
